configure_file(A_small.csv ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
configure_file(A_small_with_column_and_row_names.csv ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
configure_file(b_small.csv ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
configure_file(b_small_with_row_names.csv ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)

add_subdirectory(e_coli_core)
add_subdirectory(iAT_PLT_636)
add_subdirectory(iJO1366)
add_subdirectory(Models_Benchmark_CSMMALA_2020)
add_subdirectory(simplex_8D)
add_subdirectory(simplex_64D)
add_subdirectory(simplex_256D)
add_subdirectory(simplex_512D)
add_subdirectory(simplex_1024D)
add_subdirectory(simplex_2048D)
